--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Playing Cards</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <!-- link in Bootstrap here -->
+</head>
+
+<body>
+  <header>
+
+
+  <div class="jumbotron text-white bg-dark">
+    <h1>Playing Cards</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  </div>
+
+  </header>
+
+  <main>
+
+  <div class="container">
+
+
+    <div class="row">   
+    <!-- Card 1 -->
+    <div class="col-md-6 col-lg-3">
+
+    <div>
+    
+    <div class="card mb-4">
+    <div class="card-body">
+
+    <div class="row">
+
+      <div class="col-sm-auto col-lg-12">
+      <img class="p-3" src="img/card-club-icon.png" alt="the club suit symbol">
+      </div>
+
+      <div class="col">
+      <h2 class="card-title">Clubs</h2>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, fuga?</p>
+      <a href="#" class="btn btn-dark">Play</a>
+      </div>
+    </div>
+
+    </div>
+    </div>
+
+    </div>
+
+    </div>
+
+    <!-- Card 2 -->
+    <div class="col-md-6 col-lg-3">
+
+    <div>
+
+    <div class="card mb-4">
+    <div class="card-body">
+
+    <div class="row">
+
+      <div class="col-sm-auto col-lg-12">
+      <img class="p-3" src="img/card-diamond-icon.png" alt="the diamond suit symbol">
+      </div>
+
+      <div class="col">
+      <h2 class="card-title">Diamonds</h2>
+      <p class="card-text">Quam, officiis ut adipisci pariatur veniam labore ipsum optio tenetur!</p>
+      <a href="#" class="btn btn-dark">Play</a>
+      </div>
+    </div>
+
+    </div>
+    </div>
+
+    </div>
+
+    </div>
+
+    <!-- Card 3 -->
+    <div class="col-md-6 col-lg-3">
+
+    <div>
+  
+    <div class="card mb-4">
+    <div class="card-body">
+
+    <div class="row">
+
+      <div class="col-sm-auto col-lg-12">
+      <img class="p-3" src="img/card-heart-icon.png" alt="the heart suit symbol">
+      </div>
+
+      <div class="col">
+      <h2 class="card-title">Hearts</h2>
+      <p class="card-text">Reiciendis doloremque voluptas veniam repellendus quisquam deleniti tenetur quia a.</p>
+      <a href="#" class="btn btn-dark">Play</a>
+      </div>
+
+    </div>
+
+    </div>
+    </div>
+
+    </div>
+
+    </div>
+
+    <!-- Card 4 -->
+    <div class="col-md-6 col-lg-3">
+
+    <div>
+    <div class="card mb-4">
+    <div class="card-body">
+
+    <div class="row">
+
+      <div class="col-sm-auto col-lg-12">
+      <img class="p-3" src="img/card-spade-icon.png" alt="the heart suit symbol">
+      </div>
+
+      <div class="col">
+      <h2 class="card-title">Spades</h2>
+      <p class="card-text">Maiores voluptate rem odit dolor temporibus asperiores maxime velit sapiente.</p>
+      <a href="#" class="btn btn-dark">Play</a>
+      </div>
+    </div>
+
+    </div>
+    </div>
+
+    </div>
+
+    </div>
+
+    </div>
+
+  </div>
+
+  </main>
+</body>
+</html>
+
 
